# SO1-P1_1S_202200075

./: .gitignore  LICENSE  README.md
Proyecto1/: README.md
Proyecto1/ServicioRust/api-python/: Dockerfile  main.py
Proyecto1/ServicioRust/gestionContenedores/: .gitignore  Cargo.toml
Proyecto1/ServicioRust/gestionContenedores/src/: main.rs
Proyecto1/moduloKernel/: noborarEsteSiFuncionaEnLapFINAL.c  sysinfo2.c
Proyecto1/scriptContenedores/: .contenedores..swp  contenedores2.bash  cron_logs.txt
Proyecto2/: Consumers.yml  Go1.yml  Grafana.yml  Redist-valkey-deployment.yml  Rust.yml  Tecnico.md  Writters.yml  flood_rust.sh  kafka-rabbitmq-deployment.yml  setup-commands.md
Proyecto2/Images/Go1-api-grpc/: main.go
Proyecto2/Images/Go1-api-rest/: grpc_client.go  main.go
Proyecto2/Images/Go1-grpc/: Dockerfile  main.go
Proyecto2/Images/Go1-rest/: Dockerfile
Proyecto2/Images/Go2/: Dockerfile  main.go
Proyecto2/Images/Go2/proto/: tweet.pb.go  tweet.proto
Proyecto2/Images/Go3/: main.go
Proyecto2/Images/KafkaConsumer/: Dockerfile  go.sum  main.go
Proyecto2/Images/RabbitConsumer/: Dockerfile  go.sum  main.go
Proyecto2/Images/Rust/: Cargo.toml  Dockerfile
Proyecto2/locust/: main.py  tweets.json
ServicioRust/gestionContenedores/: Cargo.toml
ServicioRust/gestionContenedores/src/: main.rs
moduloKernel/: Makefile  prueba.json  sysinfo.c  sysinfo_back  sysinfo_back.c  sysinfo_backVPC.c  sysinfo_back_funcionaGeneraMal.c
scriptContenedores/: .contenedores2.bash.swp  contenedores.bash  contenedores2.bash  cron.txt  stop.bash
(+2 files in other folders)
