[package]
name = "gestionContenedores"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }  # Para enviar peticiones HTTP
serde = { version = "1.0", features = ["derive"] }  # Para manejar JSON
serde_json = "1.0"  # Para serializar/deserializar JSON
